trunk/Archive2/f4/263e25dff053f2/output
main.cpp: In function 'int main()':
main.cpp:12:5: error: 'cout' is not a member of 'std'
     std::cout << s << std::endl;
     ^
main.cpp:12:23: error: 'endl' is not a member of 'std'
     std::cout << s << std::endl;
                       ^
